--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "googleapis": "^128.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
